# nlp-ai

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PROGRESS.md  QUICKREF.md  README.md  WEEK_TEMPLATE.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: tests.yml
01_rnn_from_scratch/: rnn_cell.py  test_rnn_cell.py
rnn_from_scratch/: README.md  notes.md  rnn_cell.py  test_rnn_cell.py
transformer_from_scratch/: README.md  attention.py  config.py  decoder_block.py  embeddings.py  encoder_block.py  feed_forward.py  masks.py  notes.md  test_attention.py  test_decoder_output.py  test_encoder_block.py  test_feed_forward.py  test_transformer_shapes.py  utils.py
